--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,14 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="pink">#FFB3B1</color>
+    <color name="light_black">#3B4754</color>
+    <color name="dark_blue">#021F54</color>
+    <color name="magenta">#B998B3</color>
+    <color name="color_botones">#E7A8B1</color>
 </resources>
