--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,48 +7,64 @@
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="inicio"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="producto"/>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="carrito"/>
-
-    </LinearLayout>
+    <!-- LinearLayout con los tres botones, con restricciones -->
 
     <!-- Título de la pantalla -->
+
+    <!-- Campo de búsqueda -->
+
+    <!-- RecyclerView para la lista de productos -->
+
+    <LinearLayout
+        android:id="@+id/linearLayout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <Button
+            android:layout_width="115dp"
+            android:layout_height="match_parent"
+            android:drawableRight="@drawable/ic_inicio"
+            android:backgroundTint="@color/color_botones"
+            android:text="Inicio" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:drawableRight="@drawable/ic_producto"
+            android:backgroundTint="@color/color_botones"
+            android:text="Producto" />
+
+        <Button
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/color_botones"
+            android:drawableRight="@drawable/ic_carrito"
+            android:text="Carrito" />
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tvProductosTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
         android:layout_marginStart="16dp"
         android:text="Encuentra todo tipo de opciones"
+        android:textColor="@android:color/black"
         android:textSize="20sp"
         android:textStyle="bold"
-        android:textColor="@android:color/black"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/etBuscarProducto" />
 
-    <!-- Campo de búsqueda -->
     <EditText
         android:id="@+id/etBuscarProducto"
-        android:layout_width="361dp"
+        android:layout_width="0dp"
         android:layout_height="55dp"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
         android:layout_marginEnd="16dp"
         android:background="@android:color/white"
         android:hint="Buscar productos..."
@@ -56,19 +72,18 @@
         android:inputType="text"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/tvProductosTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
-    <!-- RecyclerView para la lista de productos -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvListaProductos"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/etBuscarProducto"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_width="416dp"
+        android:layout_height="559dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvProductosTitle"
         tools:listitem="@layout/item_producto" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
