--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -27,6 +27,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <Button
+            android:id="@+id/btnInicio"
             android:layout_width="115dp"
             android:layout_height="match_parent"
             android:drawableRight="@drawable/ic_inicio"
@@ -42,6 +43,7 @@
             android:text="Producto" />
 
         <Button
+            android:id="@+id/btnCarrito"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/color_botones"
