--- a/app/src/main/res/layout/activity_producto_especifico.xml
+++ b/app/src/main/res/layout/activity_producto_especifico.xml
@@ -7,11 +7,25 @@
     android:layout_height="match_parent"
     tools:context=".activities.ProductoEspecificoActivity">
 
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:layout_marginTop="16dp"
+        android:text="Volver"
+        android:backgroundTint="@color/color_botones"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+    />
+
     <ImageView
         android:id="@+id/productImage"
         android:layout_width="200dp"
         android:layout_height="200dp"
-        android:layout_marginTop="112dp"
+        android:layout_marginTop="72dp"
         android:contentDescription="Imagen del producto"
         android:scaleType="centerCrop"
         android:src="@drawable/ic_launcher_foreground"
@@ -24,7 +38,7 @@
         android:id="@+id/addToCartButton"
         android:layout_width="148dp"
         android:layout_height="58dp"
-        android:layout_marginTop="276dp"
+        android:layout_marginTop="320dp"
         android:backgroundTint="@android:color/holo_blue_dark"
         android:text="Agregar al carrito"
         android:textColor="@android:color/white"
@@ -65,7 +79,7 @@
         android:id="@+id/productName"
         android:layout_width="268dp"
         android:layout_height="35dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="72dp"
         android:text="Nombre del producto"
         android:textColor="@android:color/black"
         android:textSize="18sp"
