--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -11,13 +11,14 @@
         android:padding="16dp">
 
         <!-- Botón Volver -->
-        <TextView
+        <Button
             android:id="@+id/btn_volver"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Volver"
             android:textColor="#FF6D6D"
             android:textStyle="bold"
+            android:backgroundTint="@color/white"
             android:layout_marginBottom="16dp" />
 
         <!-- Título -->
