--- a/app/src/main/res/layout/activity_pago.xml
+++ b/app/src/main/res/layout/activity_pago.xml
@@ -324,5 +324,18 @@
             </LinearLayout>
 
         </LinearLayout>
+
+        <Button
+            android:id="@+id/btnConfirmar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            android:backgroundTint="#FF84C6"
+            android:text="Confirmar Pago"
+            android:textColor="@android:color/white"
+            android:textSize="20dp" />
     </LinearLayout>
+
 </ScrollView>
