--- a/app/src/main/res/layout/activity_carrito.xml
+++ b/app/src/main/res/layout/activity_carrito.xml
@@ -21,6 +21,7 @@
             android:backgroundTint="@color/white"
             android:layout_marginBottom="16dp" />
 
+
         <!-- Título -->
         <TextView
             android:layout_width="wrap_content"
@@ -31,23 +32,14 @@
             android:textStyle="bold"
             android:layout_marginBottom="16dp" />
 
-        <!-- Primer producto -->
-        <LinearLayout
+        <!-- RecyclerView para productos -->
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recycler_productos"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:padding="8dp"
+            android:layout_marginBottom="16dp"
             android:background="@android:color/white"
-            android:elevation="2dp"
-            android:layout_marginBottom="16dp">
-
-            <!-- RecyclerView para productos -->
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recycler_productos"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="16dp" />
-        </LinearLayout>
+            android:elevation="2dp" />
 
         <!-- Resumen -->
         <TextView
@@ -65,8 +57,10 @@
             android:orientation="vertical"
             android:padding="8dp"
             android:background="@android:color/white"
-            android:elevation="2dp">
+            android:elevation="2dp"
+            android:layout_marginBottom="16dp">
 
+            <!-- Artículos en carrito -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -75,20 +69,23 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Artículos en carrito"
+                    android:text="Artículos en carrito: "
                     android:textColor="#000000" />
 
                 <TextView
+                    android:id="@+id/tv_articulos_carrito"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="$149.00"
+                    android:text="0"
                     android:textColor="#000000" />
             </LinearLayout>
 
+            <!-- Descuentos aplicados -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -97,28 +94,32 @@
                     android:textColor="#7D7D7D" />
 
                 <TextView
+                    android:id="@+id/tv_descuentos_aplicados"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="-25.00"
+                    android:text="-$0.00"
                     android:textColor="#7D7D7D" />
             </LinearLayout>
 
+            <!-- Total -->
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="horizontal"
+                >
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Total"
+                    android:text="Total:"
                     android:textColor="#000000"
                     android:textStyle="bold" />
 
                 <TextView
+                    android:id="@+id/tv_total"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="$124.00"
+                    android:text="$0.00"
                     android:textColor="#000000"
                     android:textStyle="bold" />
             </LinearLayout>
